<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/back_button"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/_30_00"
                android:textColor="@color/white"
                android:textSize="29sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/question_nr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textSize="40sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textSize="40sp"
                android:textColor="@color/dark_grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/status_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/status_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_status"/>

        </LinearLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/loren_ipsum"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="40dp"
            android:id="@+id/answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="21dp"
            android:gravity="center"
            android:background="@drawable/rounded_answer_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answer_1_text"
                app:layout_constraintStart_toStartOf="@id/answer_1"
                app:layout_constraintTop_toTopOf="@id/answer_1"
                app:layout_constraintBottom_toBottomOf="@id/answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1"
                android:textColor="@color/medium_grey"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/answer_1_check"
                app:layout_constraintEnd_toEndOf="@id/answer_1"
                app:layout_constraintTop_toTopOf="@id/answer_1"
                app:layout_constraintBottom_toBottomOf="@id/answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_empty"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            android:id="@+id/answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="21dp"
            android:gravity="center"
            android:background="@drawable/rounded_answer_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answer_2_text"
                app:layout_constraintStart_toStartOf="@id/answer_2"
                app:layout_constraintTop_toTopOf="@id/answer_2"
                app:layout_constraintBottom_toBottomOf="@id/answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_2"
                android:textColor="@color/medium_grey"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/answer_2_check"
                app:layout_constraintEnd_toEndOf="@id/answer_2"
                app:layout_constraintTop_toTopOf="@id/answer_2"
                app:layout_constraintBottom_toBottomOf="@id/answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_empty"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            android:id="@+id/answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="21dp"
            android:gravity="center"
            android:background="@drawable/rounded_answer_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answer_3_text"
                app:layout_constraintStart_toStartOf="@id/answer_3"
                app:layout_constraintTop_toTopOf="@id/answer_3"
                app:layout_constraintBottom_toBottomOf="@id/answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3"
                android:textColor="@color/medium_grey"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/answer_3_check"
                app:layout_constraintEnd_toEndOf="@id/answer_3"
                app:layout_constraintTop_toTopOf="@id/answer_3"
                app:layout_constraintBottom_toBottomOf="@id/answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_empty"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            android:id="@+id/answer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="21dp"
            android:gravity="center"
            android:background="@drawable/rounded_answer_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answer_4_text"
                app:layout_constraintStart_toStartOf="@id/answer_4"
                app:layout_constraintTop_toTopOf="@id/answer_4"
                app:layout_constraintBottom_toBottomOf="@id/answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_4"
                android:textColor="@color/medium_grey"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/answer_4_check"
                app:layout_constraintEnd_toEndOf="@id/answer_4"
                app:layout_constraintTop_toTopOf="@id/answer_4"
                app:layout_constraintBottom_toBottomOf="@id/answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_empty"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_layout"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skip_btn"
                app:layout_constraintStart_toStartOf="@id/btn_layout"
                app:layout_constraintTop_toTopOf="@id/btn_layout"
                app:layout_constraintBottom_toBottomOf="@id/btn_layout"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_blue_btn"/>

            <androidx.appcompat.widget.AppCompatButton
                app:layout_constraintTop_toTopOf="@id/btn_layout"
                app:layout_constraintBottom_toBottomOf="@id/btn_layout"
                app:layout_constraintEnd_toEndOf="@id/btn_layout"
                android:id="@+id/confirm_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_green_btn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>